--- a/SportsNoteAPP/src/app/nav-bar/nav-bar.component.html
+++ b/SportsNoteAPP/src/app/nav-bar/nav-bar.component.html
@@ -1,20 +1,15 @@
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <i class="bi bi-bootstrap-fill"></i>
-      SportsNoteAPP</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+<p>
+  <mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>arrow_back</mat-icon>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">
-          Weight Record List
-        </a>
-        <a class="nav-link active" aria-current="page" href="#">
-          <i class="bi bi-plus-square-fill"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-</nav>
+    <span>Weight Record List</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>save_alt</mat-icon>
+    </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>add</mat-icon>
+    </button>
+  </mat-toolbar>
+</p>
