Average weight added to the chart

--- a/SportsNoteAPP/src/app/weight/weight.component.html
+++ b/SportsNoteAPP/src/app/weight/weight.component.html
@@ -1,6 +1,6 @@
 <app-weight-nav-bar></app-weight-nav-bar>
-<app-weight-chart [weightRecordList]="weightRecordList"></app-weight-chart>
-<app-weight-table [weightRecordList]="weightRecordList"></app-weight-table>
+<app-weight-chart [weightRecordList]="weightRecordList" [averageWeightRecordList]="averageWeightRecordList"></app-weight-chart>
+<app-weight-table [weightRecordList]="weightRecordList" [averageWeightRecordList]="averageWeightRecordList"></app-weight-table>
 
 
 
