--- a/SportsNoteAPP/src/app/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight-table/weight-table.component.html
@@ -1,11 +1,11 @@
-<table mat-table [dataSource]="weightRecordList" class="mat-elevation-z8">
+<table mat-table [dataSource]="recordList" class="mat-elevation-z8">
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef> Date </th>
     <td mat-cell *matCellDef="let weightRecord"> {{weightRecord.date | date : 'fullDate'}} </td>
   </ng-container>
 
   <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
+    <th mat-header-cell *matHeaderCellDef> {{weightType}} </th>
     <td mat-cell *matCellDef="let weightRecord"> {{weightRecord.weight}} </td>
   </ng-container>
 
