WIP : endpoint connexion added for delete a WeightRecord

--- a/SportsNoteAPP/src/app/weight/weight.component.html
+++ b/SportsNoteAPP/src/app/weight/weight.component.html
@@ -11,7 +11,7 @@
 
 <!--test-->
 <p>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="addWeightRecord()">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="deleteWeightRecord()">
     <mat-icon>add</mat-icon>
   </button>
 </p>
