WIP : added column for action

--- a/SportsNoteAPP/src/app/weight/weight.component.html
+++ b/SportsNoteAPP/src/app/weight/weight.component.html
@@ -10,11 +10,11 @@
 </p>
 
 <!--test-->
-<p>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="deleteWeightRecord()">
-    <mat-icon>add</mat-icon>
-  </button>
-</p>
+<!--<p>-->
+<!--  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="deleteWeightRecord()">-->
+<!--    <mat-icon>add</mat-icon>-->
+<!--  </button>-->
+<!--</p>-->
 <!---->
 <app-weight-chart [weightRecordList]="weightRecordList"
                   [averageWeightRecordList]="averageWeightRecordList"
