--- a/SportsNoteAPP/src/app/weight-nav-bar/weight-nav-bar.component.html
+++ b/SportsNoteAPP/src/app/weight-nav-bar/weight-nav-bar.component.html
@@ -8,7 +8,7 @@
     <mat-icon>save_alt</mat-icon>
   </button>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>info_outline</mat-icon>
+    <mat-icon>help_outline</mat-icon>
   </button>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>add</mat-icon>
