--- a/SportsNoteAPP/src/app/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight-table/weight-table.component.html
@@ -5,8 +5,17 @@
   </ng-container>
 
   <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> {{weightType}} </th>
+    <th mat-header-cell *matHeaderCellDef> Weight </th>
     <td mat-cell *matCellDef="let weightRecord"> {{weightRecord.weight}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="options">
+    <th mat-header-cell *matHeaderCellDef> Options </th>
+    <td mat-cell *matCellDef>
+      <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
