--- a/SportsNoteAPP/src/app/weight-nav-bar/weight-nav-bar.component.html
+++ b/SportsNoteAPP/src/app/weight-nav-bar/weight-nav-bar.component.html
@@ -10,7 +10,7 @@
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>help_outline</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="openDialog()">
     <mat-icon>add</mat-icon>
   </button>
 </mat-toolbar>
