--- a/SportsNoteAPP/src/app/weight-nav-bar-add-dialog/weight-nav-bar-add-dialog.component.html
+++ b/SportsNoteAPP/src/app/weight-nav-bar-add-dialog/weight-nav-bar-add-dialog.component.html
@@ -3,7 +3,7 @@
   <p>Date</p>
   <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker" [(ngModel)]="date">
+    <input matInput [matDatepicker]="picker" [formControl]="date">
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
@@ -14,14 +14,14 @@
   <p>Weight</p>
   <mat-form-field appearance="fill">
     <mat-label>Enter a weight</mat-label>
-    <input matInput [(ngModel)]="weight">
+    <input matInput [formControl]="weight">
     <span matSuffix>&nbsp;Kg</span>
-    <mat-hint>dd or dd.d</mat-hint>
+    <mat-hint>d or dd or dd.d</mat-hint>
   </mat-form-field>
 </div>
 <br>
 <div mat-dialog-actions>
   <button mat-raised-button mat-dialog-close="">Cancel</button>
-  <button mat-raised-button color="primary" mat-dialog-close="" (click)="addButtonClick()">Add</button>
+  <button mat-raised-button color="primary" mat-dialog-close="" (click)="addButtonClick()" [disabled]="isFormInvalid()">Add</button>
 </div>
 
