--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
@@ -11,10 +11,20 @@
 
   <ng-container matColumnDef="options">
     <th mat-header-cell *matHeaderCellDef> Options </th>
-    <td mat-cell *matCellDef>
-      <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+    <td mat-cell *matCellDef="let weightRecord">
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
         <mat-icon>more_vert</mat-icon>
       </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="openUpdateDialog(weightRecord)">
+          <mat-icon color="primary">edit</mat-icon>
+          <span>Update</span>
+        </button>
+        <button mat-menu-item (click)="openDeleteDialog(weightRecord)">
+          <mat-icon color="warn">delete</mat-icon>
+          <span>Delete</span>
+        </button>
+      </mat-menu>
     </td>
   </ng-container>
 
