--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
@@ -1,7 +1,7 @@
 <table mat-table [dataSource]="recordList" class="mat-elevation-z8">
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let weightRecord"> {{weightRecord.date | date : 'fullDate'}} </td>
+    <td mat-cell *matCellDef="let weightRecord"> {{weightRecord.date | date : 'fullDate' | titlecase}} </td>
   </ng-container>
 
   <ng-container matColumnDef="weight">
