--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table-delete-dialog/weight-table-delete-dialog.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table-delete-dialog/weight-table-delete-dialog.component.html
@@ -4,7 +4,7 @@
   <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
     <input matInput [matDatepicker]="picker" [formControl]="date" readonly>
-    <mat-hint>MM/DD/YYYY</mat-hint>
+    <mat-hint>DD/MM/YYYY</mat-hint>
     <mat-datepicker-toggle matSuffix [for]="picker" disabled></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
