--- a/SportsNoteAPP/src/app/weight/weight-nav-bar/weight-nav-bar-add-dialog/weight-nav-bar-add-dialog.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-nav-bar/weight-nav-bar-add-dialog/weight-nav-bar-add-dialog.component.html
@@ -1,5 +1,7 @@
-<h1>Add Weight</h1>
-<div>
+<div [hidden]="isLoading">
+  <h1>Add Weight</h1>
+  <p [hidden]="!isError">ERRRRROOOOOORRRRRR</p>
+  <div>
   <p>Date</p>
   <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
@@ -21,7 +23,13 @@
 </div>
 <br>
 <div mat-dialog-actions>
-  <button mat-raised-button mat-dialog-close="">Cancel</button>
-  <button mat-raised-button color="primary" mat-dialog-close="" (click)="addButtonClick()" [disabled]="isFormInvalid()">Add</button>
+  <button mat-raised-button mat-dialog-close="cancel">Cancel</button>
+  <button mat-raised-button color="primary" (click)="addButtonClick()" [disabled]="isFormInvalid()">Add</button>
 </div>
+</div>
+<div [hidden]="!isLoading">
+  <mat-spinner></mat-spinner>
+</div>
+
+
 
