--- a/SportsNoteAPP/src/app/weight/weight.component.html
+++ b/SportsNoteAPP/src/app/weight/weight.component.html
@@ -1,4 +1,4 @@
-<app-weight-nav-bar></app-weight-nav-bar>
+<app-weight-nav-bar (onWeightChange)="getWeightRecordListAndAverageWeightRecordList()"></app-weight-nav-bar>
 <p>
   <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
     <mat-button-toggle value="bold" (click)="setToggleOnWeight()">Weight</mat-button-toggle>
