dialog event action added

--- a/SportsNoteAPP/src/app/weight/weight.component.html
+++ b/SportsNoteAPP/src/app/weight/weight.component.html
@@ -10,7 +10,8 @@
                   [isAverageWeightToggleSelected]="isAverageWeightToggleSelected"></app-weight-chart>
 <app-weight-table [weightRecordList]="weightRecordList"
                   [averageWeightRecordList]="averageWeightRecordList"
-                  [isAverageWeightToggleSelected]="isAverageWeightToggleSelected"></app-weight-table>
+                  [isAverageWeightToggleSelected]="isAverageWeightToggleSelected"
+                  (onWeightChange)="getWeightRecordListAndAverageWeightRecordList()"></app-weight-table>
 
 
 
