--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table-update-dialog/weight-table-update-dialog.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table-update-dialog/weight-table-update-dialog.component.html
@@ -1,4 +1,6 @@
+<div [hidden]="isLoading">
 <h1>Update Weight</h1>
+  <p [hidden]="!isError">ERRRRROOOOOORRRRRR</p>
 <div>
   <p>Date</p>
   <mat-form-field appearance="fill">
@@ -23,4 +25,8 @@
 <div mat-dialog-actions>
   <button mat-raised-button mat-dialog-close="">Cancel</button>
   <button mat-raised-button color="primary" mat-dialog-close="" (click)="updateButtonClick()" [disabled]="isFormInvalid()">Update</button>
+</div>
+</div>
+<div [hidden]="!isLoading">
+  <mat-spinner></mat-spinner>
 </div>
