--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
@@ -17,7 +17,7 @@
       </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="openUpdateDialog(weightRecord)">
-          <mat-icon color="primary">edit</mat-icon>
+          <mat-icon color="yellowColor">edit</mat-icon>
           <span>Update</span>
         </button>
         <button mat-menu-item (click)="openDeleteDialog(weightRecord)">
