--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table-delete-dialog/weight-table-delete-dialog.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table-delete-dialog/weight-table-delete-dialog.component.html
@@ -3,7 +3,7 @@
   <p [hidden]="!isError">ERRRRROOOOOORRRRRR</p>
 <div>
   <p>Date</p>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="disabledStyle">
     <mat-label>Choose a date</mat-label>
     <input matInput [matDatepicker]="picker" [formControl]="date" readonly>
     <mat-hint>DD/MM/YYYY</mat-hint>
@@ -14,7 +14,7 @@
 <br>
 <div>
   <p>Weight</p>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="disabledStyle">
     <mat-label>Enter a weight</mat-label>
     <input matInput [formControl]="weight" readonly>
     <span matSuffix>&nbsp;Kg</span>
@@ -24,7 +24,7 @@
 <br>
 <div mat-dialog-actions>
   <button mat-raised-button mat-dialog-close="">Cancel</button>
-  <button mat-raised-button color="primary" mat-dialog-close="" (click)="deleteButtonClick()" [disabled]="isFormInvalid()">Delete</button>
+  <button mat-raised-button color="warn" mat-dialog-close="" (click)="deleteButtonClick()" [disabled]="isFormInvalid()">Delete</button>
 </div>
 </div>
 <div [hidden]="!isLoading">
