--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table-update-dialog/weight-table-update-dialog.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table-update-dialog/weight-table-update-dialog.component.html
@@ -3,7 +3,7 @@
   <p [hidden]="!isError">ERRRRROOOOOORRRRRR</p>
 <div>
   <p>Date</p>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" class="disabledStyle">
     <mat-label>Choose a date</mat-label>
     <input matInput [matDatepicker]="picker" [formControl]="date" readonly>
     <mat-hint>DD/MM/YYYY</mat-hint>
@@ -16,7 +16,7 @@
   <p>Weight</p>
   <mat-form-field appearance="fill">
     <mat-label>Enter a weight</mat-label>
-    <input matInput [formControl]="weight">
+    <input matInput [formControl]="weight" cdkFocusRegionstart onfocus="this.select()">
     <span matSuffix>&nbsp;Kg</span>
     <mat-hint>d or dd or dd.d</mat-hint>
   </mat-form-field>
@@ -24,7 +24,7 @@
 <br>
 <div mat-dialog-actions>
   <button mat-raised-button mat-dialog-close="">Cancel</button>
-  <button mat-raised-button color="primary" mat-dialog-close="" (click)="updateButtonClick()" [disabled]="isFormInvalid()">Update</button>
+  <button mat-raised-button color="yellowBackGroundColor" mat-dialog-close="" (click)="updateButtonClick()" [disabled]="isFormInvalid()">Update</button>
 </div>
 </div>
 <div [hidden]="!isLoading">
