--- a/SportsNoteAPP/src/styles.scss
+++ b/SportsNoteAPP/src/styles.scss
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.disabledStyle {
+  color: grey;
+  pointer-events: none;
+}
+.mat-yellowBackGroundColor{
+  color: white;
+  background-color: #f3c700;
+}
