--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
@@ -6,13 +6,13 @@
 
   <ng-container matColumnDef="weight">
     <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let weightRecord"> {{weightRecord.weight}} </td>
+    <td mat-cell *matCellDef="let weightRecord" [class]="colorByWeighTypeSelection()"> {{weightRecord.weight}} </td>
   </ng-container>
 
   <ng-container matColumnDef="options">
     <th mat-header-cell *matHeaderCellDef> Options </th>
     <td mat-cell *matCellDef="let weightRecord">
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu" [disabled]="isAverageWeightToggleSelected">
         <mat-icon>more_vert</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
