Color updated unused button disabled

--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.scss
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.scss
@@ -2,11 +2,11 @@ table {
   width: 100%;
 }
 .mat-yellowColor{
-  color: #f3c700;
+  color: #FFC107;
 }
 .weightColor{
-  color: #247BC0;
+  color: #3F51B5;
 }
 .averageWeightColor{
-  color: #C979E5;
+  color: #FF4081;
 }
