--- a/SportsNoteAPP/src/styles.scss
+++ b/SportsNoteAPP/src/styles.scss
@@ -8,5 +8,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 .mat-yellowBackGroundColor{
   color: white;
-  background-color: #f3c700;
+  background-color: #FFC107;
 }
