--- a/SportsNoteAPP/src/app/weight/weight-nav-bar/weight-nav-bar.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-nav-bar/weight-nav-bar.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" disabled>
     <mat-icon>arrow_back</mat-icon>
   </button>
   <span>Weight Record List</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" disabled>
     <mat-icon>save_alt</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" disabled>
     <mat-icon>help_outline</mat-icon>
   </button>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="openDialog()">
