--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.scss
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.scss
@@ -6,7 +6,9 @@ table {
 }
 .weightColor{
   color: #3F51B5;
+  padding-left: 25px;
 }
 .averageWeightColor{
   color: #FF4081;
+  padding-left: 25px;
 }
