--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
@@ -7,8 +7,8 @@
   <ng-container matColumnDef="weight">
     <th mat-header-cell *matHeaderCellDef>
       <mat-chip-list aria-label="Fish selection">
-        <span [hidden]="isAverageWeightToggleSelected"><mat-chip color="primary" selected>Weight</mat-chip></span>
-        <span [hidden]="!isAverageWeightToggleSelected"><mat-chip color="accent" selected>Weight</mat-chip></span>
+        <span [hidden]="!isAverageWeightToggleSelected" (click)="setToggleToWeight()"><mat-chip color="accent" selected>Weight</mat-chip></span>
+        <span [hidden]="isAverageWeightToggleSelected" (click)="setToggleToAverageWeight()"><mat-chip color="primary" selected>Weight</mat-chip></span>
     </mat-chip-list>
     </th>
     <td mat-cell *matCellDef="let weightRecord" [class]="colorByWeighTypeSelection()"> {{weightRecord.weight}} </td>
