period filter updated

--- a/SportsNoteAPP/src/app/weight/weight.component.html
+++ b/SportsNoteAPP/src/app/weight/weight.component.html
@@ -8,7 +8,8 @@
                   [isAverageWeightToggleSelected]="isAverageWeightToggleSelected"
                   (onWeightChange)="getWeightRecordListAndAverageWeightRecordList()"
                   (onSetToggleToWeight)="setToggleOnWeight()"
-                  (onSetToggleToAverageWeight)="setToggleOnAverageWeight()"></app-weight-table>
+                  (onSetToggleToAverageWeight)="setToggleOnAverageWeight()"
+                  (period)="setPeriod($event)"></app-weight-table>
 
 
 
