--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
@@ -1,6 +1,35 @@
 <table mat-table [dataSource]="recordList" class="mat-elevation-z8">
   <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-chip-list aria-label="Fish selection">
+        <span [matMenuTriggerFor]="dateMenu" [hidden]="!isDateFilterActivated"><mat-chip color="primary" selected>Date</mat-chip></span>
+        <span [matMenuTriggerFor]="dateMenu" [hidden]="isDateFilterActivated"><mat-chip>Date</mat-chip></span>
+      </mat-chip-list>
+
+      <mat-menu #dateMenu="matMenu">
+        <button mat-menu-item (click)="setDateFilterToLastWeek()">
+          <span>Last Week</span>
+        </button>
+        <button mat-menu-item (click)="setDateFilterToLastMonth()">
+          <span>Last Month</span>
+        </button>
+        <button mat-menu-item (click)="setDateFilterToLastThreeMonth()">
+          <span>Last Three Month</span>
+        </button>
+        <button mat-menu-item (click)="setDateFilterToLastSixMonth()">
+          <span>Last Six Month</span>
+        </button>
+        <button mat-menu-item (click)="setDateFilterToLastYear()">
+          <span>Last Year</span>
+        </button>
+        <button mat-menu-item (click)="setDateFilterToChoose()" disabled>
+          <span>Choose</span>
+        </button>
+        <button mat-menu-item (click)="setDateFilterToAll()">
+          <span>All</span>
+        </button>
+      </mat-menu>
+    </th>
     <td mat-cell *matCellDef="let weightRecord"> {{weightRecord.date | date : 'fullDate' | titlecase}} </td>
   </ng-container>
 
