--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.scss
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.scss
@@ -14,5 +14,9 @@ table {
 }
 .primaryColorMenu {
   background: #3F51B5;
-  color: grey;
+  color: white;
+}
+.greyColorMenu {
+  background: grey;
+  color: white;
 }
