--- a/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
+++ b/SportsNoteAPP/src/app/weight/weight-table/weight-table.component.html
@@ -10,6 +10,9 @@
         <button mat-menu-item (click)="setDateFilterToLastWeek()" [class]="isPeriodFilterStatusLastWeekForClass()" [disabled]="isPeriodFilterStatusLastWeekForDisabled()">
           <span>Last Week</span>
         </button>
+        <button mat-menu-item (click)="setDateFilterToLastTwoWeek()" [class]="isPeriodFilterStatusLastTwoWeekForClass()" [disabled]="isPeriodFilterStatusLastTwoWeekForDisabled()">
+          <span>Last Two Week</span>
+        </button>
         <button mat-menu-item (click)="setDateFilterToLastMonth()" [class]="isPeriodFilterStatusLastMonthForClass()" [disabled]="isPeriodFilterStatusLastMonthForDisabled()">
           <span>Last Month</span>
         </button>
