WIP : fix data refresh, table weight type switch fixed 2

--- a/SportsNoteAPP/src/app/weight/weight.component.html
+++ b/SportsNoteAPP/src/app/weight/weight.component.html
@@ -8,6 +8,8 @@
 <app-weight-table [weightRecordList]="weightRecordList"
                   [averageWeightRecordList]="averageWeightRecordList"
                   [isAverageWeightToggleSelected]="isAverageWeightToggleSelected"
+                  [weightChange]="onWeightChange"
+                  [averageWeightChange]="onAverageWeightChange"
                   (onWeightChange)="getWeightRecordListAndAverageWeightRecordList()"
                   (onSetToggleToWeight)="setToggleOnWeight()"
                   (onSetToggleToAverageWeight)="setToggleOnAverageWeight()"
